--- a/trunk/.cproject
+++ b/trunk/.cproject
@@ -18,13 +18,13 @@
 <pathentry excluding="**/CMakeFiles/" kind="out" path=""/>
 <pathentry include="C:/Users/daroo/workspace/poplib/include" kind="inc" path="" system="true"/>
 <pathentry include="C:/Users/daroo/workspace/poplib/include/dmkp" kind="inc" path="" system="true"/>
-<pathentry include="C:/Qt/2010.04/mingw/include" kind="inc" path="" system="true"/>
-<pathentry include="c:/qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include" kind="inc" path="" system="true"/>
-<pathentry include="C:/Qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include-fixed" kind="inc" path="" system="true"/>
-<pathentry include="C:/Qt/2010.04/mingw/mingw32/include" kind="inc" path="" system="true"/>
-<pathentry include="c:/qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include/c++" kind="inc" path="" system="true"/>
-<pathentry include="c:/qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include/c++/mingw32" kind="inc" path="" system="true"/>
-<pathentry include="c:/qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include/c++/backward" kind="inc" path="" system="true"/>
+<pathentry include="c:/Qt/2010.04/mingw/include" kind="inc" path="" system="true"/>
+<pathentry include="c:/Qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include" kind="inc" path="" system="true"/>
+<pathentry include="c:/Qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include-fixed" kind="inc" path="" system="true"/>
+<pathentry include="c:/Qt/2010.04/mingw/mingw32/include" kind="inc" path="" system="true"/>
+<pathentry include="c:/Qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include/c++" kind="inc" path="" system="true"/>
+<pathentry include="c:/Qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include/c++/mingw32" kind="inc" path="" system="true"/>
+<pathentry include="c:/Qt/2010.04/mingw/lib/gcc/mingw32/4.4.0/include/c++/backward" kind="inc" path="" system="true"/>
 </storageModule>
 <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
 <buildTargets>
